gift section added

--- a/index.html
+++ b/index.html
@@ -138,7 +138,37 @@
                 </div>
             </div>
         </section>
-
+        <section class="gift">
+            <p class="gt-1">The Best Gift</p>
+            <h2 class="gt-2">Our Awesome Portfolio</h2>
+            <p class="gc">
+                As the New Year unfolds, exchanging thoughtful gifts becomes a 
+                heartwarming tradition, symbolizing appreciation and good wishes. 
+            </p>
+            <div class="rec-img-1">
+                <div class="r3">
+                    <img src="/resources/Rectangle 3.png" alt="" srcset="">
+                </div>
+                <div class="r3">
+                    <img src="/resources/Rectangle 4.png" alt="" srcset="">
+                </div>
+                <div class="r3">
+                    <img src="/resources/Rectangle 5.png" alt="" srcset="">
+                </div>
+                
+            </div>
+            <div class="rec-img-1">
+                <div class="r6">
+                    <img src="/resources/Rectangle 6.png" alt="" srcset="">
+                </div>
+                <div class="r6">
+                    <img src="/resources/Rectangle 7.png" alt="" srcset="">
+                </div>
+                <div class="r6">
+                    <img src="/resources/Rectangle 8.png" alt="" srcset="">
+                </div>
+            </div>
+        </section>
         <section class="bg1">
             <img src="/resources/Group 61.png" alt="" srcset="">
 
