--- a/index.html
+++ b/index.html
@@ -191,15 +191,39 @@
             <div class="f-line">
                 <div class="d1"></div>
                 <p class="fp">
-                    44, Big Building Roosevelt Street
+                    44, Big Building Roosevelt Street <br>
                     Beach Gardens Florida 33410
                 </p>
                 <div class="d2"></div>
                 <p>
-                    +00 123 584 124
+                   <span><img src="/resources/Call.png" alt="" srcset=""></span> +00 123 584 124
+                <br> <br>
+                    <span><img src="/resources/Website.png" alt="" srcset=""></span> www.website.com
                 </p>
+            </div>
+            <div class="links">
+                <div class="social">
+                    <img src="/resources/Facebook.png" alt="" srcset="">
+                </div>
+                <div class="social">
+                    <img src="/resources/Instagram.png" alt="" srcset="">
+                </div>
+                <div class="social">
+                    <img src="/resources/Twitter.png" alt="">
+                </div>
+                <div class="social">
+                    <img src="/resources/Linkedin.png" alt="">
+                </div>
+            </div>
+
+            <div class="f-line">
+                <div class="d1"></div>
+                <p class="fp">
+                    2024, All Rights Reserved
+                </p>
+                <div class="d2"></div>
                 <p>
-                    www.website.com
+                   <button class="unsubs">Unsubscribe</button>
                 </p>
             </div>
         </div>
