--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
             </div>
             <div class="img">
-                <img src="/resources/New Year Photo.png" alt="" srcset="">
+                <img src="./resources/New Year Photo.png" alt="" srcset="">
             </div>
         </div>
     </header>
