--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
 
             <div class="img-70">
-                <img src="/resources/Group 70.png" alt="" srcset="">
+                <img src="./resources/Group 70.png" alt="" srcset="">
             </div>
 
 
@@ -94,7 +94,7 @@
                 </p>
             </div>
             <div class="img-elp">
-                <img src="/resources/Ellipse 1.png" alt="" srcset="">
+                <img src="./resources/Ellipse 1.png" alt="" srcset="">
             </div>
 
             <div>
@@ -103,7 +103,7 @@
                     This limited-time offer is our way of saying thank you for
                     choosing us. Don't miss out.
                     <br><br>
-                    <img src="/resources/Group 96.png" alt="" srcset="">
+                    <img src="./resources/Group 96.png" alt="" srcset="">
                 </p>
 
             </div>
@@ -128,13 +128,13 @@
             </p>
             <div class="img-t3">
                 <div class="img1">
-                    <img src="/resources/Group 75.png" alt="" srcset="">
+                    <img src="./resources/Group 75.png" alt="" srcset="">
                 </div>
                 <div class="img2">
-                    <img src="/resources/Group 44.png" alt="" srcset="">
+                    <img src="./resources/Group 44.png" alt="" srcset="">
                 </div>
                 <div class="img3">
-                    <img src="/resources/Rectangle 1.png" alt="" srcset="">
+                    <img src="./resources/Rectangle 1.png" alt="" srcset="">
                 </div>
             </div>
         </section>
@@ -147,30 +147,30 @@
             </p>
             <div class="rec-img-1">
                 <div class="r3">
-                    <img src="/resources/Rectangle 3.png" alt="" srcset="">
+                    <img src="./resources/Rectangle 3.png" alt="" srcset="">
                 </div>
                 <div class="r3">
-                    <img src="/resources/Rectangle 4.png" alt="" srcset="">
+                    <img src="./resources/Rectangle 4.png" alt="" srcset="">
                 </div>
                 <div class="r3">
-                    <img src="/resources/Rectangle 5.png" alt="" srcset="">
+                    <img src="./resources/Rectangle 5.png" alt="" srcset="">
                 </div>
 
             </div>
             <div class="rec-img-1">
                 <div class="r6">
-                    <img src="/resources/Rectangle 6.png" alt="" srcset="">
+                    <img src="./resources/Rectangle 6.png" alt="" srcset="">
                 </div>
                 <div class="r6">
-                    <img src="/resources/Rectangle 7.png" alt="" srcset="">
+                    <img src="./resources/Rectangle 7.png" alt="" srcset="">
                 </div>
                 <div class="r6">
-                    <img src="/resources/Rectangle 8.png" alt="" srcset="">
+                    <img src="./resources/Rectangle 8.png" alt="" srcset="">
                 </div>
             </div>
         </section>
         <section class="bg1">
-            <img src="/resources/Group 61.png" alt="" srcset="">
+            <img src="./resources/Group 61.png" alt="" srcset="">
 
             <h1>
                 Subscribers Newsletter
@@ -196,23 +196,23 @@
                 </p>
                 <div class="d2"></div>
                 <p>
-                   <span><img src="/resources/Call.png" alt="" srcset=""></span> +00 123 584 124
+                   <span><img src="./resources/Call.png" alt="" srcset=""></span> +00 123 584 124
                 <br> <br>
-                    <span><img src="/resources/Website.png" alt="" srcset=""></span> www.website.com
+                    <span><img src="./resources/Website.png" alt="" srcset=""></span> www.website.com
                 </p>
             </div>
             <div class="links">
                 <div class="social">
-                    <img src="/resources/Facebook.png" alt="" srcset="">
+                    <img src="./resources/Facebook.png" alt="" srcset="">
                 </div>
                 <div class="social">
-                    <img src="/resources/Instagram.png" alt="" srcset="">
+                    <img src="./resources/Instagram.png" alt="" srcset="">
                 </div>
                 <div class="social">
-                    <img src="/resources/Twitter.png" alt="">
+                    <img src="./resources/Twitter.png" alt="">
                 </div>
                 <div class="social">
-                    <img src="/resources/Linkedin.png" alt="">
+                    <img src="./resources/Linkedin.png" alt="">
                 </div>
             </div>
 
