tried on 100% view

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="invitation">
             <div>
                 <h2 class="invi-title">
-                    Welcome To New Year Party
+                    Welcome To MidNight Party
                 </h2>
 
                 <p class="invi-content">
@@ -170,11 +170,11 @@
             </div>
         </section>
         <section class="bg1">
-            <img src="./resources/Group 61.png" alt="" srcset="">
+            <img style="width: 150px;" src="./resources/Group 61.png" alt="" srcset="">
 
-            <h1>
+            <h3>
                 Subscribers Newsletter
-            </h1>
+            </h3>
             <p class="sm">
                 Your message is invaluable to us! Share your thoughts and
                 help us enhance your experience as a valued subscriber.
